Ignore sample directory in CI

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,11 +6,13 @@ on:
       - main
     paths-ignore:
       - '**.md'
+      - 'sample/**'
   push:
     branches:
       - main
     paths-ignore:
       - '**.md'
+      - 'sample/**'
   workflow_dispatch:
 
 jobs:
